// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`feature-random should implement random correctly 1`] = `"kQBsdnzSK1ku1RZ0g6tp0pTvuwuMveMSI7Ron9xdITg732ZR"`;

exports[`feature-random should implement random correctly 2`] = `"kQBfr8kKOkyTsEW4URlQZQi0RmjdsKY1CgQFz7iDtZ84iRxm"`;

exports[`feature-random should implement random correctly 3`] = `"kQAKkggHuAOhfFYngH8JQQ37GJBgICKY3r56ZYzblKc7hH7Q"`;

exports[`feature-random should implement random correctly 4`] = `
[
  {
    "type": "deploy",
  },
  {
    "message": {
      "body": {
        "text": "Message",
        "type": "text",
      },
      "bounce": true,
      "from": "kQBbjpCWk51tkYZGsmjT-XQUL0QGlxJD4fQHGbYhdCbwQlX-",
      "to": "kQBsdnzSK1ku1RZ0g6tp0pTvuwuMveMSI7Ron9xdITg732ZR",
      "type": "internal",
      "value": 10000000000n,
    },
    "type": "received",
  },
  {
    "gasUsed": 17181n,
    "type": "processed",
  },
  {
    "messages": [
      {
        "body": {
          "text": "Message",
          "type": "text",
        },
        "bounce": true,
        "from": "kQBsdnzSK1ku1RZ0g6tp0pTvuwuMveMSI7Ron9xdITg732ZR",
        "to": "kQBfr8kKOkyTsEW4URlQZQi0RmjdsKY1CgQFz7iDtZ84iRxm",
        "type": "internal",
        "value": 9970565000n,
      },
    ],
    "type": "sent",
  },
]
`;

exports[`feature-random should implement random correctly 5`] = `
[
  {
    "type": "deploy",
  },
  {
    "message": {
      "body": {
        "text": "Message",
        "type": "text",
      },
      "bounce": true,
      "from": "kQBsdnzSK1ku1RZ0g6tp0pTvuwuMveMSI7Ron9xdITg732ZR",
      "to": "kQBfr8kKOkyTsEW4URlQZQi0RmjdsKY1CgQFz7iDtZ84iRxm",
      "type": "internal",
      "value": 9970565000n,
    },
    "type": "received",
  },
  {
    "gasUsed": 15009n,
    "type": "processed",
  },
  {
    "messages": [
      {
        "body": {
          "text": "Message",
          "type": "text",
        },
        "bounce": true,
        "from": "kQBfr8kKOkyTsEW4URlQZQi0RmjdsKY1CgQFz7iDtZ84iRxm",
        "to": "kQAKkggHuAOhfFYngH8JQQ37GJBgICKY3r56ZYzblKc7hH7Q",
        "type": "internal",
        "value": 9946839000n,
      },
    ],
    "type": "sent",
  },
]
`;

exports[`feature-random should implement random correctly 6`] = `
[
  {
    "type": "deploy",
  },
  {
    "message": {
      "body": {
        "text": "Message",
        "type": "text",
      },
      "bounce": true,
      "from": "kQBfr8kKOkyTsEW4URlQZQi0RmjdsKY1CgQFz7iDtZ84iRxm",
      "to": "kQAKkggHuAOhfFYngH8JQQ37GJBgICKY3r56ZYzblKc7hH7Q",
      "type": "internal",
      "value": 9946839000n,
    },
    "type": "received",
  },
  {
    "gasUsed": 14945n,
    "type": "processed",
  },
  {
    "messages": [
      {
        "body": {
          "text": "Message2",
          "type": "text",
        },
        "bounce": true,
        "from": "kQAKkggHuAOhfFYngH8JQQ37GJBgICKY3r56ZYzblKc7hH7Q",
        "to": "kQAKkggHuAOhfFYngH8JQQ37GJBgICKY3r56ZYzblKc7hH7Q",
        "type": "internal",
        "value": 9923169000n,
      },
    ],
    "type": "sent",
  },
  {
    "message": {
      "body": {
        "text": "Message2",
        "type": "text",
      },
      "bounce": true,
      "from": "kQAKkggHuAOhfFYngH8JQQ37GJBgICKY3r56ZYzblKc7hH7Q",
      "to": "kQAKkggHuAOhfFYngH8JQQ37GJBgICKY3r56ZYzblKc7hH7Q",
      "type": "internal",
      "value": 9923169000n,
    },
    "type": "received",
  },
  {
    "gasUsed": 3301n,
    "type": "processed",
  },
]
`;
